# WhereIsNevsky

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py  schemas.py
app/geocoder/: city_objects_extractor.py  geocoder.py  objects_address_extractor_by_rules.py  street_extractor.py  text_address_extractor_by_rules.py
app/utils/data_getter/: geo_data_getter.py  historical_geo_data_getter.py  street_getter.py
app/utils/data_processing/: area_matcher.py  city_services_extract.py
geocoder/: city_objects_extractor.py  geocoder.py  objects_address_extractor_by_rules.py  street_extractor.py
utils/data_getter/: geo_data_getter.py  historical_geo_data_getter.py  street_getter.py
utils/data_processing/: city_services_extract.py
