[project]
name = "whereisnevsky"
version = "0.1.0"
description = "Geocoding of texts"
authors = [
    {name = "KhudyakovGleb",email = "glebkhudyakov@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pandas (==2.2.2)",
    "seaborn (==0.12.2)",
    "nltk (==3.8.1)",
    "scikit-learn (==1.4.2)",
    "fuzzywuzzy (==0.18.0)",
    "geopandas (==0.12.2)",
    "numpy (>=1.26.0)",
    "flair (==0.12.2)",
    "networkx (==3.3)",
    "osm2geojson (==0.2.3)",
    "osmnx (==1.5.1)",
    "pymorphy2 (==0.9.1)",
    "pymorphy2-dicts-ru (==2.4.417127.4579844)",
    "torch (==2.1.1)",
    "tqdm (==4.64.1)",
    "geopy (==2.3.0)",
    "shapely (==2.0.1)",
    "transformers (==4.26.1)",
    "bertopic (==0.15.0)",
    "autodocsumm (==0.2.11)",
    "flake8 (==6.0.0)",
    "isort (==5.12.0)",
    "black (==23.1.0)",
    "pylint (==3.0.2)",
    "vk-api (==11.9.9)",
    "natasha (==1.6.0)",
    "loguru (==0.7.2)",
    "pandarallel (==1.6.5)",
    "pymorphy3 (==2.0.1)",
    "keybert (==0.8.3)",
    "pyarrow (==15.0.0)",
    "jupyter (>=1.0.0,<2.0.0)",
    "testresources (>=2.0.1,<3.0.0)",
    "rapidfuzz (>=3.9.0,<4.0.0)",
    "osmapi (>=4.0.0,<5.0.0)",
    "aniemore (>=1.2.3,<2.0.0)",
    "scipy (==1.12)",
    "folium (>=0.16.0,<0.17.0)",
    "furo (>=2024.5.6,<2025.0.0)",
    "readthedocs-sphinx-search (>=0.3.2,<0.4.0)",
    "sphinx-autobuild (>=2024.4.16,<2025.0.0)",
    "sphinx-design (>=0.6.0,<0.7.0)",
    "sphinx-hoverxref (>=1.4.0,<2.0.0)",
    "sphinx-inline-tabs (>=2023.4.21,<2024.0.0)",
    "sphinx-issues (>=4.1.0,<5.0.0)",
    "sphinx-notfound-page (>=1.0.2,<2.0.0)",
    "sphinx (>=7.3.7,<8.0.0)",
    "myst-parser (>=3.0.1,<4.0.0)",
    "sphinx-rtd-theme (>=2.0.0,<3.0.0)",
    "mapclassify (>=2.6.1,<3.0.0)",
    "hypernetx (>=2.3.5,<3.0.0)",
    "fastapi (>=0.115.6,<0.116.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "fastapi-cli (>=0.0.7,<0.0.8)",
    "spacy (>=3.8.4,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
